<resources>
    <string name="app_name">maple_stat</string>
    <string name="title_stat">내 스탯</string>
    <string name="title_efficiency">스탯 효율</string>
    <string name="title_calculator">효율 계산기</string>
    <string name="spinner_prompt">-선택-</string>
    <string name="spec_setting">스펙 설정</string>

    <string name="character_setting">케릭터</string>
        <string name="character_normal_setting">기본</string>
        <string name="character_ability_setting">어빌리티</string>
        <string name="character_tendency_setting">성향</string>
        <string name="character_symbol_setting">심볼</string>
        <string name="character_blessing_setting">축복 (0차 스킬)</string>
        <string name="character_cash_setting">캐시장비</string>
        <string name="character_title_setting">칭호</string>
    <string name="item_setting">장비</string>
    <string name="pet_setting">펫</string>
    <string name="guild_setting">길드 스킬</string>
        <string name="guild_passive_setting">길드 패시브 스킬</string>
        <string name="guild_active_setting">길드 액티브 스킬</string>
    <string name="farm_setting">농장</string>
    <string name="etc_setting">기타 버프</string>

    <string name="union_setting">유니온</string>
        <string name="union_arrangement_setting">유니온 배치</string>
        <string name="union_raid_setting">유니온 공격대원</string>
    <string name="link_setting">링크</string>
    <string name="hyper_setting">하이퍼스텟</string>


</resources>
