<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_stat">

    <fragment
        android:id="@+id/navigation_stat"
        android:name="com.example.maple_stat.ui.stat.StatFragment"
        android:label="@string/title_stat"
        tools:layout="@layout/fragment_stat" />

    <fragment
        android:id="@+id/navigation_efficiency"
        android:name="com.example.maple_stat.ui.efficiency.EfficiencyFragment"
        android:label="@string/title_efficiency"
        tools:layout="@layout/fragment_efficiency" />

    <fragment
        android:id="@+id/navigation_calculator"
        android:name="com.example.maple_stat.ui.calculator.CalculatorFragment"
        android:label="@string/title_calculator"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.maple_stat.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>