<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.maple_stat.ui.setting.setting_inner_fragment.SettingCharacterFragment">
    <data>
        <variable
            name="fragment"
            type="com.example.maple_stat.ui.setting.setting_inner_fragment.SettingCharacterFragment"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@color/colorPrimaryDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginBottom="0.1dp">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:background="@drawable/ripple_effect_textview"
                        android:gravity="center|left"
                        android:text="@string/character_normal_setting"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"
                        android:onClick="@{(view) -> fragment.pressCharacterNormalButton(view)}"/>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@color/colorPrimaryDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginBottom="0.1dp">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:background="@drawable/ripple_effect_textview"
                        android:gravity="center|left"
                        android:text="@string/character_ability_setting"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"
                        android:onClick="@{(view) -> fragment.pressCharacterAbilityButton(view)}"/>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@color/colorPrimaryDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginBottom="0.1dp">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:background="@drawable/ripple_effect_textview"
                        android:gravity="center|left"
                        android:text="@string/character_tendency_setting"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"
                        android:onClick="@{(view) -> fragment.pressCharacterTendencyButton(view)}"/>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@color/colorPrimaryDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginBottom="0.1dp">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:background="@drawable/ripple_effect_textview"
                        android:gravity="center|left"
                        android:text="@string/character_symbol_setting"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"
                        android:onClick="@{(view) -> fragment.pressCharacterSymbolButton(view)}"/>

                </LinearLayout>



            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@color/colorPrimaryDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginBottom="0.1dp">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:background="@drawable/ripple_effect_textview"
                        android:gravity="center|left"
                        android:text="@string/character_blessing_setting"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"
                        android:onClick="@{(view) -> fragment.pressCharacterBlessingButton(view)}"/>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@color/colorPrimaryDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginBottom="0.1dp">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:background="@drawable/ripple_effect_textview"
                        android:gravity="center|left"
                        android:text="@string/character_cash_setting"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"
                        android:onClick="@{(view) -> fragment.pressCharacterLabelButton(view)}"/>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@color/colorPrimaryDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_marginBottom="0.1dp">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:background="@drawable/ripple_effect_textview"
                        android:gravity="center|left"
                        android:text="@string/character_title_setting"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"
                        android:onClick="@{(view) -> fragment.pressCharacterTitleButton(view)}"/>

                </LinearLayout>

            </TableRow>



        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>